# scryer

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.app  LICENSE  README.md  deploy-app.sh  fly-app.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-dev.sh  shell.nix  tsconfig.tsbuildinfo  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml
apps/agent-api/: .env.example  Dockerfile  entry-point.sh  fly.toml  package.json  requirements.txt  rqworker@.service  schema.sql  task-worker.sh
apps/agent-api/src/: main.py
apps/app/: .env.example  entrypoint.sh  env.ts  geoipupdate_7.1.0_linux_amd64.deb  instrumentation.ts  messagingHandlers.ts  next.config.ts  package.json
apps/app/client/: LICENSE  build.js  package.json  tsconfig.json
apps/web/: .env.example  env.ts  next.config.ts  package.json
crates/scryer-acp/: Cargo.toml
crates/scryer-acp/src/: client.rs  events.rs  lib.rs  prompt.rs  runtime.rs
crates/scryer-core/: Cargo.toml
crates/scryer-core/src/: drift.rs  lib.rs  rules.rs  scan.rs
crates/scryer-mcp/: Cargo.toml
crates/scryer-mcp/src/: helpers.rs  instructions.rs  main.rs  server.rs  types.rs  validate.rs
crates/scryer-mcp/src/tools/: edges.rs  misc.rs  mod.rs  nodes.rs  read.rs  task.rs
crates/scryer-suggest/: Cargo.toml
crates/scryer-suggest/src/: engine.rs  lib.rs  models.rs  parse.rs  prompt.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
database/: Dockerfile  README.md  proxy.sh
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
scripts/: bump-version.sh
src/: App.tsx  C4Canvas.tsx  CodeLevelRack.tsx  CommandPalette.tsx  ContextPanel.tsx  DescriptionText.tsx  ErrorBoundary.tsx  FlowCanvas.tsx  FlowEditPopup.tsx  FlowScriptView.tsx  GroupsView.tsx  GuidePanels.tsx  MentionTextarea.tsx  NodeDataContext.tsx  PropertiesPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SyncBar.tsx  ThemePanel.tsx  Toast.tsx  TopBar.tsx  edgeBundling.ts  edgeRouting.ts  index.css  kindIcons.ts  layout.ts  main.tsx  statusColors.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.sh  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: game-ecs.scry  game.scry  saas-platform.scry  website-cms.scry
src/context-panel/: ContractContainer.tsx  ContractSection.tsx  DescendantsSection.tsx  EdgePanel.tsx  EdgesSection.tsx  GroupChainSection.tsx  GroupContextPanel.tsx  HintsFooter.tsx  JsonKey.tsx  MultiSelectionPanel.tsx  NodeDataSection.tsx  NotesList.tsx  SourceMapSection.tsx  StatusBar.tsx  json.tsx  utils.ts
src/edges/: RelationshipEdge.tsx  index.ts
src/hooks/: useAdvisor.ts  useCanvasEvents.ts  useHistory.ts  useModelStorage.ts  useNodeContext.ts  useNodesChange.ts  useVisibleNodes.ts
src/layout/: groups.ts  planar.ts  routing.ts
src/nodes/: C4Node.tsx  ContractBadge.tsx  FlowStepNode.tsx  GroupNode.tsx  HintBadge.tsx  ModelNode.tsx  NodeHandles.tsx  OperationNode.tsx  ProcessNode.tsx  index.ts
src/shapes/: ShapeBackground.tsx  ShapeIcon.tsx  index.ts  paths.ts
src/ui/: Button.tsx  Divider.tsx  Field.tsx  Input.tsx  KVRow.tsx  PillToggle.tsx  Section.tsx  SegmentedControl.tsx  Select.tsx  Textarea.tsx  Toggle.tsx  index.ts
(+70 files in other folders)
