[package]
name = "scryer"
version = "0.1.0"
description = "Visual architecture planning tool for AI-assisted software design"
authors = ["Alexander Klos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scryer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "~2.9", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-core = { path = "../crates/scryer-core" }
scryer-suggest = { path = "../crates/scryer-suggest" }
notify = "6"
tokio = { version = "1", features = ["rt-multi-thread"] }
which = "7"

