[package]
name = "scryer-suggest"
version = "0.2.2"
edition = "2021"
description = "AI advisor for Scryer architecture models"
authors = ["Alexander Klos"]

[dependencies]
scryer-core = { path = "../scryer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llm = { version = "1.3", default-features = false, features = [
    "openai", "anthropic", "google", "ollama", "groq", "mistral", "deepseek",
    "default-tls",
] }
tokio = { version = "1", features = ["rt", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }
